backend/src/main/java/com/example/library/error/VndErrors.java
package com.example.library.error;

public class VndErrors {
    public VndErrors(String error, String message) {

    }
}
